Update Day 5 link to point to 9-5calc.html

--- a/schoolwork.html
+++ b/schoolwork.html
@@ -264,7 +264,7 @@
         <a href="WebProjects/Week9/9-2.html">Day 2</a>
         <a href="WebProjects/Week9/9-3.html">Day 3</a>
         <a href="WebProjects/Week9/9-4.html">Day 4</a>
-        <a href="WebProjects/Week9/9-5.html">Day 5</a>
+        <a href="WebProjects/Week9/9-5calc.html">Day 5</a>
       </div>
     </div>
     <div class ="sub-dropdown">
