--- a/WebProjects/Week9/9-5calc.html
+++ b/WebProjects/Week9/9-5calc.html
@@ -10,7 +10,7 @@
     .calculatorbody {
         width: 400px;
         height: 600px;
-        background-color: #1d1c1c;
+        background-color: #847a7aff;
         border: 2px solid #ccc;
         border-radius: 10px;
         margin: 50px auto;
@@ -22,7 +22,7 @@
         width: 360px;
         height: 100px;
         background-color: #000;
-        color: #0f0;
+        color: rgba(255, 255, 255, 1);
         font-size: 32px;
         text-align: right;
         position: absolute;
@@ -41,7 +41,7 @@
 <div class="calculatorbody">
 </div>
 <div class ="calculatorscreen">
-    341235
+    
 </div>
 
 
