--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #beserker {
             border: 6px solid rgb(204, 17, 211);
-            border-radius: 8px; /* optional: rounded corners */
+            border-radius: 8px; 
             box-shadow: 0 4px 8px rgb(0, 0, 0);
             position: absolute;
             right:30px;
@@ -166,6 +166,6 @@
 
     
 
-0
+
 </body>
 </html>
