--- a/schoolwork.html
+++ b/schoolwork.html
@@ -278,7 +278,7 @@
       </div>
     </div>
     <div class ="sub-dropdown">
-      <button class ="sub-dropbtn">week 11</button>
+      <button class ="sub-dropbtn">Week 11</button>
       <div class ="sub-dropdown-content">
         <a href="=WebProjects/Week11/11-1.html">Day 1</a>
         <a href="WebProjects/Week11/11-2.html">Day 2</a>
