--- a/WebProjects/Week9/9-5calc.html
+++ b/WebProjects/Week9/9-5calc.html
@@ -41,8 +41,20 @@
 <div class="calculatorbody">
 </div>
 <div class ="calculatorscreen">
-    
+
 </div>
+
+<div class ="buttons">
+    
+
+</div>
+
+
+
+<script>
+    // JavaScript code for calculator functionality can be added here
+
+</script>
 
 
 
