HALF LIFE 3 IS NOT OUT

--- a/index.html
+++ b/index.html
@@ -114,8 +114,24 @@
                 border-radius: 12px;
                 box-shadow: 4px 4px 10px rgb(0, 0, 0);
             }
+            #hl3 {
+                position: absolute;
+                
+                top: 100px;
+                width: 2000px;
+            }
+            #fellforit {
+                position: absolute;
+                top: 1500px;
+                left: 1200px;
+                width: 300px;
+            }
     </style>
 </head>
+
+<image src = "img/Freemeat.png " id="hl3"> </image>
+<image src = 'img/fellforit.png' id="fellforit"> </image>
+
 <body>
     <h1> This is my first web page </h1>
     <b> Mitchell Chan Reynolds &#128049 </b>
